--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,16 @@
 *.exe
 *.out
 *.app
+# http://www.gnu.org/software/automake
+
+Makefile.in
+
+# http://www.gnu.org/software/autoconf
+
+/autom4te.cache
+/aclocal.m4
+/compile
+/configure
+/depcomp
+/install-sh
+/missing
