HIDAPI で動くようになった

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,10 +1,10 @@
 
-AM_CFLAGS = @hidapi_CFLAGS@ @libusb_CFLAGS@
+AM_CFLAGS = @hidapi_CFLAGS@
 
 bin_PROGRAMS = rdpc101 rdpc-test
 
 rdpc101_SOURCES = rdpc101.c librdpc101.c
-rdpc101_LDADD = @hidapi_LIBS@ @libusb_LIBS@
+rdpc101_LDADD = @hidapi_LIBS@
 
 rdpc_test_SOURCES = rdpc-test.c librdpc101.c
-rdpc_test_LDADD = @hidapi_LIBS@ @libusb_LIBS@
+rdpc_test_LDADD = @hidapi_LIBS@
