エラー処理と正しいpkgconfig対応

--- a/configure.ac
+++ b/configure.ac
@@ -23,7 +23,8 @@ AC_TYPE_UINT8_T
 AC_FUNC_MALLOC
 AC_CHECK_FUNCS([memset strdup strerror])
 
-PKG_CHECK_MODULES(hidapi, hidapi >= 0.7.0)
+PKG_CHECK_MODULES(hidapi, hidapi-libusb >= 0.7.0)
+PKG_CHECK_MODULES(libusb, libusb-1.0 >= 0.1.10)
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
